Finalizando documentação do JWT
